// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validate cli app --help Expect Error: outputHelp 1`] = `
Array [
  "Usage: cspell [options] [command]",
  "",
  "Spelling Checker for Code",
  "",
  "Options:",
  "  -V, --version               output the version number",
  "  -h, --help                  display help for command",
  "",
  "Commands:",
  "  lint [options] [files...]   Check spelling",
  "  trace [options] <words...>  Trace words",
  "    Search for words in the configuration and dictionaries.",
  "  check [options] <files...>  Spell check file(s) and display the result. The",
  "                              full file is displayed in color.",
  "  link                        Link dictionaries any other settings to the",
  "                              cspell global config.",
  "  help [command]              display help for command",
  "",
]
`;

exports[`Validate cli app --help Expect Error: outputHelp 2`] = `""`;

exports[`Validate cli app LICENSE Expect Error: undefined 1`] = `Array []`;

exports[`Validate cli app LICENSE Expect Error: undefined 2`] = `
"error	1/1 ./LICENSE 0.00ms
error	CSpell: Files checked: 1, Issues found: 0 in 0 files"
`;

exports[`Validate cli app bad config Expect Error: [Function CheckFailed] 1`] = `Array []`;

exports[`Validate cli app bad config Expect Error: [Function CheckFailed] 2`] = `
"error	Configuration Error: Failed to find config file at: \\"./src/app.test.ts\\"
error	CSpell: Files checked: 0, Issues found: 0 in 0 files"
`;

exports[`Validate cli app check LICENSE Expect Error: undefined 1`] = `
Array [
  "[97mMIT License[39m",
  "[97m[39m",
  "[97mCopyright (c) 2017 Jason Dent[39m",
  "[97m[39m",
  "[97mPermission is hereby granted, free of charge, to any person obtaining a copy[39m",
  "[97mof this software and associated documentation files (the \\"Software\\"), to deal[39m",
  "[97min the Software without restriction, including without limitation the rights[39m",
  "[97mto use, copy, modify, merge, publish, distribute, sublicense, and/or sell[39m",
  "[97mcopies of the Software, and to permit persons to whom the Software is[39m",
  "[97mfurnished to do so, subject to the following conditions:[39m",
  "[97m[39m",
  "[97mThe above copyright notice and this permission notice shall be included in all[39m",
  "[97mcopies or substantial portions of the Software.[39m",
  "[97m[39m",
  "[97mTHE SOFTWARE IS PROVIDED \\"AS IS\\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR[39m",
  "[97mIMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,[39m",
  "[97mFITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE[39m",
  "[97mAUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER[39m",
  "[97mLIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,[39m",
  "[97mOUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE[39m",
  "[97mSOFTWARE.[39m",
  "[97m[39m",
]
`;

exports[`Validate cli app check LICENSE Expect Error: undefined 2`] = `
"log	Check file: ./LICENSE
log	
log	
log	"
`;

exports[`Validate cli app check help Expect Error: outputHelp 1`] = `
Array [
  "Usage: cspell check [options] <files...>",
  "",
  "Spell check file(s) and display the result. The full file is displayed in color.",
  "",
  "Options:",
  "  -c, --config <cspell.json>  Configuration file to use.  By default cspell",
  "                              looks for cspell.json in the current directory.",
  "  --no-color                  Turn off color.",
  "  --color                     Force color",
  "  -h, --help                  display help for command",
  "",
]
`;

exports[`Validate cli app check help Expect Error: outputHelp 2`] = `""`;

exports[`Validate cli app check missing Expect Error: [Function CheckFailed] 1`] = `Array []`;

exports[`Validate cli app check missing Expect Error: [Function CheckFailed] 2`] = `
"log	Check file: ./missing-file.txt
log	
error	File not found \\"./missing-file.txt\\""
`;

exports[`Validate cli app check with spelling errors Expect Error: [Function CheckFailed] 1`] = `
Array [
  "[97m                              [[39m[31mNEDERLANDS[39m[97m][39m",
  "[97m        U [39m[31mwordt[39m[97m [39m[31mvriendelijk[39m[97m [39m[31mverzocht[39m[97m om dit [39m[31mbestand[39m[97m (\\"README_nl_NL.txt\\")[39m",
  "[97m      te [39m[31mlezen[39m[97m en mee te [39m[31mleveren[39m[97m bij [39m[31miedere[39m[97m [39m[31mkopie[39m[97m van dit [39m[31mtaalhulpbestand[39m[97m.[39m",
  "[97m[39m",
  "[97m1. [39m[31mNaam[39m[97m: [39m[31mNederlandstalige[39m[97m [39m[31mwoordenlijst[39m[97m [39m[31mvoor[39m[97m [39m[31mspellingcontrole[39m[97m - OpenTaal[39m",
  "[97m2. [39m[31mVersie[39m[97m [39m[31mwoordenlijst[39m[97m: 2.00G; [39m[31mversie[39m[97m [39m[31mspellingcontrole[39m[97m: 2.00G.[39m",
  "[97m3. [39m[31mVereisten[39m[97m: Hunspell 1.2.8 en [39m[31mhoger[39m[97m[39m",
  "[97m4. [39m[31mKeurmerk[39m[97m Spelling [39m[31mNederlandse[39m[97m [39m[31mTaalunie[39m[97m: De [39m[31mlijst[39m[97m met [39m[31mbasiswoorden[39m[97m van[39m",
  "[97m   OpenTaal [39m[31mdraagt[39m[97m het [39m[31mkeurmerk[39m[97m van de [39m[31mNederlandse[39m[97m [39m[31mTaalunie[39m[97m. [39m[31mVoor[39m[97m [39m[31mmeer[39m[97m[39m",
  "[97m   [39m[31minformatie[39m[97m zie: [39m[90mhttp://www.taalunieversum.org/keurmerk[39m[97m[39m",
  "[97m5. [39m[31mAuteursrechten[39m[97m: © 2006-2010 OpenTaal, © 2001-2005 Simon [39m[31mBrouwer[39m[97m e.a.,[39m",
  "[97m   © 1996 [39m[31mNederlandstalige[39m[97m Tex [39m[31mGebruikersgroep[39m[97m[39m",
  "[97m6. [39m[31mLicenties[39m[97m: OpenTaal [39m[31mheeft[39m[97m als [39m[31mdoel[39m[97m om [39m[31mvrij[39m[97m [39m[31mbeschikbare[39m[97m [39m[31mNederlandstalige[39m[97m[39m",
  "[97m   [39m[31mtaalhulpbestanden[39m[97m te [39m[31montwikkelen[39m[97m en te [39m[31mverspreiden[39m[97m. Om breed (her)[39m[31mgebruik[39m[97m[39m",
  "[97m   [39m[31mmogelijk[39m[97m te [39m[31mmaken[39m[97m [39m[31mzijn[39m[97m de [39m[31mtaalhulpbestanden[39m[97m gratis [39m[31mbeschikbaar[39m[97m [39m[31monder[39m[97m de twee[39m",
  "[97m   [39m[31monderstaande[39m[97m, [39m[31mliberale[39m[97m [39m[31mlicenties[39m[97m [39m[31mnaar[39m[97m [39m[31mkeuze[39m[97m van de [39m[31mgebruiker[39m[97m. U [39m[31mwordt[39m[97m ten[39m",
  "[97m   [39m[31mzeerste[39m[97m [39m[31maangeraden[39m[97m om [39m[31mvoorafgaand[39m[97m aan het [39m[31mgebruik[39m[97m [39m[31mkennis[39m[97m te [39m[31mnemen[39m[97m van de[39m",
  "[97m   [39m[31mtoepasselijke[39m[97m [39m[31mlicentie[39m[97m.[39m",
  "[97m   A. BSD ([39m[31mherziene[39m[97m [39m[31mversie[39m[97m):[39m",
  "[97m   - [39m[31mVolledige[39m[97m [39m[31mlicentie[39m[97m: [39m[90mhttp://creativecommons.org/licenses/BSD/legalcode[39m[97m[39m",
  "[97m   - [39m[31mSamenvatting[39m[97m: [39m[90mhttp://creativecommons.org/licenses/BSD/deed.nl[39m[97m[39m",
  "[97m   B. Creative Commons, [39m[31mNaamsvermelding[39m[97m 3.0 ([39m[31munported[39m[97m)[39m",
  "[97m   - [39m[31mVolledige[39m[97m [39m[31mlicentie[39m[97m: [39m[90mhttp://creativecommons.org/licenses/by/3.0/legalcode[39m[97m[39m",
  "[97m   - [39m[31mSamenvatting[39m[97m: [39m[90mhttp://creativecommons.org/licenses/by/3.0/deed.nl[39m[97m[39m",
  "[97m7. [39m[31mSteun[39m[97m OpenTaal: OpenTaal is een [39m[31mvrijwilligersproject[39m[97m [39m[31mzonder[39m[97m [39m[31mwinstoogmerk[39m[97m.[39m",
  "[97m   Door uw ([39m[31mkleine[39m[97m) [39m[31mfinanciële[39m[97m [39m[31msteun[39m[97m kan OpenTaal [39m[31mmeer[39m[97m [39m[31mactiviteiten[39m[97m [39m[31montplooien[39m[97m[39m",
  "[97m   en het project [39m[31mprofessionaliseren[39m[97m. Uw [39m[31mdonatie[39m[97m is van harte [39m[31mwelkom[39m[97m op[39m",
  "[97m   [39m[31mrekeningnummer[39m[97m 15.62.32.782 t.n.v. [39m[31mStichting[39m[97m OpenTaal. Uw [39m[31mgiften[39m[97m [39m[31mzijn[39m[97m[39m",
  "[97m   [39m[31maftrekbaar[39m[97m van de [39m[31mbelasting[39m[97m. [39m[31mStichting[39m[97m OpenTaal is [39m[31mnamelijk[39m[97m door de[39m",
  "[97m   [39m[31mBelastingdienst[39m[97m [39m[31merkend[39m[97m als [39m[31mANBI[39m[97m, [39m[31moftewel[39m[97m \\"[39m[31mAlgemeen[39m[97m Nut [39m[31mBeogende[39m[97m [39m[31mInstelling[39m[97m\\".[39m",
  "[97m   Zie: [39m[90mhttp://belastingdienst.nl/anbi/[39m[97m[39m",
  "[97m8. [39m[31mMeedoen[39m[97m: [39m[31mIedereen[39m[97m is [39m[31mwelkom[39m[97m om mee te [39m[31mdoen[39m[97m. Meld [39m[31mfouten[39m[97m, [39m[31mdiscussieer[39m[97m mee op[39m",
  "[97m   de [39m[31mmailinglijst[39m[97m of [39m[31mdraai[39m[97m Harvester. Door bij te [39m[31mdragen[39m[97m aan het project [39m[31mstemt[39m[97m[39m",
  "[97m   u [39m[31mermee[39m[97m in dat uw [39m[31mbijdrage[39m[97m aan het [39m[31mdesbetreffende[39m[97m [39m[31mtaalhulpbestand[39m[97m [39m[31mbeschikbaar[39m[97m[39m",
  "[97m   [39m[31mkomt[39m[97m [39m[31monder[39m[97m [39m[31mvrije[39m[97m en/of [39m[31mopensource[39m[97m [39m[31mlicenties[39m[97m. [39m[31mIndien[39m[97m u dat [39m[31mwenst[39m[97m, dan kan uw[39m",
  "[97m   [39m[31mnaam[39m[97m op de website [39m[31mgenoemd[39m[97m [39m[31mworden[39m[97m. We [39m[31montvangen[39m[97m uw [39m[31mschriftelijk[39m[97m [39m[31mverzoek[39m[97m[39m",
  "[97m   [39m[31mdaarvoor[39m[97m [39m[31mgraag[39m[97m.[39m",
  "[97m9. [39m[31mRechten[39m[97m van [39m[31mderden[39m[97m: OpenTaal [39m[31mrespecteert[39m[97m de [39m[31mrechten[39m[97m van [39m[31mderden[39m[97m en[39m",
  "[97m   wil haar [39m[31mgegevens[39m[97m [39m[31mvrij[39m[97m [39m[31mbeschikbaar[39m[97m [39m[31mhouden[39m[97m. [39m[31mVoor[39m[97m [39m[31mbijdragen[39m[97m aan het project mag[39m",
  "[97m   u [39m[31mdaarom[39m[97m [39m[31mniet[39m[97m [39m[31mzonder[39m[97m [39m[31mtoestemming[39m[97m [39m[31mgebruikmaken[39m[97m van [39m[31mbeschermde[39m[97m [39m[31mnaslagwerken[39m[97m,[39m",
  "[97m   [39m[31mzoals[39m[97m [39m[31mwoordenboeken[39m[97m. Wel is het [39m[31mtoegestaan[39m[97m om [39m[31mgebruik[39m[97m te [39m[31mmaken[39m[97m van de[39m",
  "[97m   [39m[31mmaterialen[39m[97m van de [39m[31mNederlandse[39m[97m [39m[31mTaalunie[39m[97m, [39m[31mzoals[39m[97m de [39m[31mleidraad[39m[97m en de [39m[31mwoordenlijst[39m[97m.[39m",
  "[97m   [39m[31mIndien[39m[97m u van [39m[31mmening[39m[97m bent dat OpenTaal [39m[31minbreuk[39m[97m [39m[31mmaakt[39m[97m op uw [39m[31mrechten[39m[97m, dan[39m",
  "[97m   [39m[31mverzoeken[39m[97m we u [39m[31mhierover[39m[97m zo [39m[31mspoedig[39m[97m [39m[31mmogelijk[39m[97m [39m[31mschriftelijk[39m[97m contact met ons op[39m",
  "[97m   te [39m[31mnemen[39m[97m.[39m",
  "[97m10.Contact: [39m[31mStichting[39m[97m OpenTaal, [39m[90mhttp://www.opentaal.org,[39m[97m [39m[90mbestuur@opentaal.org[39m[97m[39m",
  "[97m_________________________________________________________________________________[39m",
  "[97m                                [ENGLISH][39m",
  "[97m        You are kindly requested to read this file \\"README_nl_NL.txt\\"[39m",
  "[97m     and to keep a copy of it with every copy you make of this language file.[39m",
  "[97m[39m",
  "[97m1. Name: Dutch word list for spell checking - OpenTaal[39m",
  "[97m2. Version of words list: 2.00G; version spell checking: 2.00G[39m",
  "[97m3. Requirements: Hunspell 1.2.8 and higher[39m",
  "[97m4. Spelling Seal of Dutch Language Union: The OpenTaal list of lemmas has[39m",
  "[97m   received the Spelling Seal of Approval from the Dutch Language Union, the[39m",
  "[97m   formal Dutch language institute. For more information please see:[39m",
  "[97m   [39m[90mhttp://www.taalunieversum.org/keurmerk/[39m[97m[39m",
  "[97m5. Copyrights: © 2006-2010 OpenTaal, © 2001-2005 Simon [39m[31mBrouwer[39m[97m e.a.,[39m",
  "[97m   © 1996 [39m[31mNederlandstalige[39m[97m Tex [39m[31mGebruikersgroep[39m[97m[39m",
  "[97m6. Licenses: OpenTaal aims to create and publish free Dutch language files. To[39m",
  "[97m   enable the broadest (re)use the language files are freely available under the[39m",
  "[97m   below, liberal licenses at the discretion of the user. We strongly recommend[39m",
  "[97m   to read the applicable license before usage.[39m",
  "[97m   A. BSD (revised version):[39m",
  "[97m   - Full license text: [39m[90mhttp://creativecommons.org/licenses/BSD/legalcode[39m[97m[39m",
  "[97m   - Summary: [39m[90mhttp://creativecommons.org/licenses/BSD/deed.en[39m[97m[39m",
  "[97m   B. Creative Commons, Attribution 3.0 ([39m[31munported[39m[97m)[39m",
  "[97m   - Full license text: [39m[90mhttp://creativecommons.org/licenses/by/3.0/legalcode[39m[97m[39m",
  "[97m   - Summary: [39m[90mhttp://creativecommons.org/licenses/by/3.0/deed.en[39m[97m[39m",
  "[97m7. Support OpenTaal: OpenTaal is a non-profit volunteer project. With your[39m",
  "[97m   (small) financial support OpenTaal will further expand its activities and[39m",
  "[97m   enhance its professionalism. Your donation is welcome at[39m",
  "[97m   account number: 15.62.32.782, BIC: [39m[31mRABONL[39m[97m2U, [39m[31mIBAN[39m[97m: NL88[39m[31mRABO[39m[97m0156232782 of[39m",
  "[97m   [39m[31mStichting[39m[97m OpenTaal / OpenTaal Foundation. In the Netherlands your donations[39m",
  "[97m   are tax deductible. OpenTaal Foundation has been designated by the Dutch Tax[39m",
  "[97m   Administration as an Institution for General Benefit ([39m[31malgemeen[39m[97m nut [39m[31mbeogende[39m[97m[39m",
  "[97m   [39m[31minstelling[39m[97m or [39m[31mANBI[39m[97m). Please see: [39m[90mhttp://belastingdienst.nl/anbi/[39m[97m[39m",
  "[97m8. Participate: Everyone is welcome to participate. Please give feedback,[39m",
  "[97m   discuss on the mailing list or run Harvester. By contributing to the project[39m",
  "[97m   you agree that your contribution is available under free or/open source[39m",
  "[97m   licenses. In case you wish, your name will be mentioned on the website. Your[39m",
  "[97m   are invited to send us your written request.[39m",
  "[97m9. Rights of third parties: OpenTaal respects the rights of third parties and[39m",
  "[97m   aims to keep its data freely available. Therefore you may no use protected[39m",
  "[97m   sources of third parties, i.e. dictionaries, without their permission when[39m",
  "[97m   you contribute to the project. It is permitted to use the materials of the[39m",
  "[97m   Dutch Language Union, i.e. their spelling instruction and word list. In case[39m",
  "[97m   you believe OpenTaal is violating your rights, we ask you to send us a[39m",
  "[97m   written notice as soon as possible.[39m",
  "[97m10.Contact: OpenTaal Foundation, [39m[90mhttp://www.opentaal.org,[39m[97m [39m[90mbestuur@opentaal.org[39m[97m[39m",
  "[97m[39m",
  "[97mcspell:language en,nl[39m",
  "[97m[39m",
]
`;

exports[`Validate cli app check with spelling errors Expect Error: [Function CheckFailed] 2`] = `
"log	Check file: ./samples/Dutch.txt
log	
log	
log	"
`;

exports[`Validate cli app cspell-bad.json Expect Error: undefined 1`] = `Array []`;

exports[`Validate cli app cspell-bad.json Expect Error: undefined 2`] = `
"error	1/1 ./src/app.test.ts 0.00ms
error	CSpell: Files checked: 1, Issues found: 0 in 0 files"
`;

exports[`Validate cli app cspell-import-missing.json Expect Error: [Function CheckFailed] 1`] = `Array []`;

exports[`Validate cli app cspell-import-missing.json Expect Error: [Function CheckFailed] 2`] = `
"error	Configuration Error: Failed to read config file: \\"./samples/intentionally-missing-file.json\\"
error	CSpell: Files checked: 0, Issues found: 0 in 0 files"
`;

exports[`Validate cli app current_file --verbose Expect Error: undefined 1`] = `Array []`;

exports[`Validate cli app current_file --verbose Expect Error: undefined 2`] = `
"info	
info	cspell;
info	Date: Sat, 03 Apr 2021 11:25:33 GMT
info	Options:
info	    verbose:   Yes
info	    config:    default
info	    exclude:   node_modules/**
info	    files:     src/app.test.ts
info	    wordsOnly: No
info	    unique:    No
info	
info	Config Files Found:
info	    ./cspell.json
info	
info	Exclusion Globs: 
info	    Glob: *.snap from ./cspell.json
info	    Glob: node_modules from ./cspell.json
info	    Glob: package-lock.json from ./cspell.json
info	    Glob: coverage/** from ./cspell.json
info	    Glob: dist/** from ./cspell.json
info	    Glob: package.json from ./cspell.json
info	    Glob: .cspell.json from ./cspell.json
info	    Glob: .vscode/** from ./cspell.json
info	    Glob: node_modules/** from command line
info	
info	Checking: ./src/app.test.ts, File type: auto, Language: default
info	Checked: ./src/app.test.ts, File type: typescript, Language: en ... Issues: 0 0.00S
info	Config file Used: ./cspell.json
info	Dictionaries Used: backwards-compatibility, filetypes, public-licenses, softwareTerms, companies, workspace, aws, cryptocurrencies, en_us, fullstack, node, npm, typescript
error	1/1 ./src/app.test.ts 0.00ms
error	CSpell: Files checked: 1, Issues found: 0 in 0 files"
`;

exports[`Validate cli app current_file Expect Error: undefined 1`] = `Array []`;

exports[`Validate cli app current_file Expect Error: undefined 2`] = `
"error	1/1 ./src/app.test.ts 0.00ms
error	CSpell: Files checked: 1, Issues found: 0 in 0 files"
`;

exports[`Validate cli app current_file languageId Expect Error: undefined 1`] = `Array []`;

exports[`Validate cli app current_file languageId Expect Error: undefined 2`] = `
"error	1/1 ./src/app.test.ts 0.00ms
error	CSpell: Files checked: 1, Issues found: 0 in 0 files"
`;

exports[`Validate cli app link 1`] = `Array []`;

exports[`Validate cli app link add 1`] = `Array []`;

exports[`Validate cli app link list 1`] = `Array []`;

exports[`Validate cli app link ls 1`] = `Array []`;

exports[`Validate cli app link remove 1`] = `Array []`;

exports[`Validate cli app must find force no error Expect Error: undefined 1`] = `Array []`;

exports[`Validate cli app must find force no error Expect Error: undefined 2`] = `"error	CSpell: Files checked: 0, Issues found: 0 in 0 files"`;

exports[`Validate cli app must find with error Expect Error: [Function CheckFailed] 1`] = `Array []`;

exports[`Validate cli app must find with error Expect Error: [Function CheckFailed] 2`] = `"error	CSpell: Files checked: 0, Issues found: 0 in 0 files"`;

exports[`Validate cli app no-args Expect Error: outputHelp 1`] = `
Array [
  "Usage: cspell lint [options] [files...]",
  "",
  "Check spelling",
  "",
  "Options:",
  "  -c, --config <cspell.json>   Configuration file to use.  By default cspell",
  "                               looks for cspell.json in the current directory.",
  "  -v, --verbose                display more information about the files being",
  "                               checked and the configuration",
  "  --locale <locale>            Set language locales. i.e. \\"en,fr\\" for English",
  "                               and French, or \\"en-GB\\" for British English.",
  "  --language-id <language>     Force programming language for unknown",
  "                               extensions. i.e. \\"php\\" or \\"scala\\"",
  "  --wordsOnly                  Only output the words not found in the",
  "                               dictionaries.",
  "  -u, --unique                 Only output the first instance of a word not",
  "                               found in the dictionaries.",
  "  --debug                      Output information useful for debugging",
  "                               cspell.json files.",
  "  -e, --exclude <glob>         Exclude files matching the glob pattern. This",
  "                               option can be used multiple times to add",
  "                               multiple globs.",
  "  --no-issues                  Do not show the spelling errors.",
  "  --no-progress                Turn off progress messages",
  "  --no-summary                 Turn off summary message in console",
  "  -s, --silent                 Silent mode, suppress error messages",
  "  -r, --root <root folder>     Root directory, defaults to current directory.",
  "  --relative                   Issues are displayed relative to root.",
  "  --show-context               Show the surrounding text around an issue.",
  "  --show-suggestions           Show spelling suggestions.",
  "  --no-must-find-files         Do not error if no files are found",
  "  --legacy                     Legacy output",
  "  --cache                      Only check changed files (default: false)",
  "  --cache-strategy <strategy>  Strategy to use for detecting changed files",
  "                               (choices: \\"metadata\\", \\"content\\")",
  "  --cache-location <path>      Path to the cache file or directory (default:",
  "                               \\".cspellcache\\")",
  "  --gitignore                  Ignore files matching glob patterns found in",
  "                               .gitignore files.",
  "  --no-gitignore               Do NOT use .gitignore files.",
  "  --gitignore-root <path>      Prevent searching for .gitignore files past",
  "                               root.",
  "  --no-color                   Turn off color.",
  "  --color                      Force color",
  "  -h, --help                   display help for command",
  "",
  "",
  "Examples:",
  "    cspell \\"*.js\\"                   Check all .js files in the current directory",
  "    cspell \\"**/*.js\\"                Check all .js files from the current directory",
  "    cspell \\"src/**/*.js\\"            Only check .js under src",
  "    cspell \\"**/*.txt\\" \\"**/*.js\\"     Check both .js and .txt files.",
  "    cspell \\"**/*.{txt,js,md}\\"       Check .txt, .js, and .md files.",
  "    cat LICENSE | cspell stdin      Check stdin",
  "",
  "",
]
`;

exports[`Validate cli app no-args Expect Error: outputHelp 2`] = `""`;

exports[`Validate cli app not found error by default Expect Error: [Function CheckFailed] 1`] = `Array []`;

exports[`Validate cli app not found error by default Expect Error: [Function CheckFailed] 2`] = `"error	CSpell: Files checked: 0, Issues found: 0 in 0 files"`;

exports[`Validate cli app samples/Dutch.txt Expect Error: [Function CheckFailed] 1`] = `Array []`;

exports[`Validate cli app samples/Dutch.txt Expect Error: [Function CheckFailed] 2`] = `
"error	1/1 ./samples/Dutch.txt 0.00ms X
log	./samples/Dutch.txt:1:32 - Unknown word (NEDERLANDS)
log	./samples/Dutch.txt:2:11 - Unknown word (wordt)
log	./samples/Dutch.txt:2:17 - Unknown word (vriendelijk)
log	./samples/Dutch.txt:2:29 - Unknown word (verzocht)
log	./samples/Dutch.txt:2:45 - Unknown word (bestand)
log	./samples/Dutch.txt:3:10 - Unknown word (lezen)
log	./samples/Dutch.txt:3:26 - Unknown word (leveren)
log	./samples/Dutch.txt:3:38 - Unknown word (iedere)
log	./samples/Dutch.txt:3:45 - Unknown word (kopie)
log	./samples/Dutch.txt:3:59 - Unknown word (taalhulpbestand)
log	./samples/Dutch.txt:5:4 - Unknown word (Naam)
log	./samples/Dutch.txt:5:10 - Unknown word (Nederlandstalige)
log	./samples/Dutch.txt:5:27 - Unknown word (woordenlijst)
log	./samples/Dutch.txt:5:40 - Unknown word (voor)
log	./samples/Dutch.txt:5:45 - Unknown word (spellingcontrole)
log	./samples/Dutch.txt:6:4 - Unknown word (Versie)
log	./samples/Dutch.txt:6:11 - Unknown word (woordenlijst)
log	./samples/Dutch.txt:6:32 - Unknown word (versie)
log	./samples/Dutch.txt:6:39 - Unknown word (spellingcontrole)
log	./samples/Dutch.txt:7:4 - Unknown word (Vereisten)
log	./samples/Dutch.txt:7:33 - Unknown word (hoger)
log	./samples/Dutch.txt:8:4 - Unknown word (Keurmerk)
log	./samples/Dutch.txt:8:22 - Unknown word (Nederlandse)
log	./samples/Dutch.txt:8:34 - Unknown word (Taalunie)
log	./samples/Dutch.txt:8:47 - Unknown word (lijst)
log	./samples/Dutch.txt:8:57 - Unknown word (basiswoorden)
log	./samples/Dutch.txt:9:13 - Unknown word (draagt)
log	./samples/Dutch.txt:9:24 - Unknown word (keurmerk)
log	./samples/Dutch.txt:9:40 - Unknown word (Nederlandse)
log	./samples/Dutch.txt:9:52 - Unknown word (Taalunie)
log	./samples/Dutch.txt:9:62 - Unknown word (Voor)
log	./samples/Dutch.txt:9:67 - Unknown word (meer)
log	./samples/Dutch.txt:10:4 - Unknown word (informatie)
log	./samples/Dutch.txt:11:4 - Unknown word (Auteursrechten)
log	./samples/Dutch.txt:11:60 - Unknown word (Brouwer)
log	./samples/Dutch.txt:12:11 - Unknown word (Nederlandstalige)
log	./samples/Dutch.txt:12:32 - Unknown word (Gebruikersgroep)
log	./samples/Dutch.txt:13:4 - Unknown word (Licenties)
log	./samples/Dutch.txt:13:24 - Unknown word (heeft)
log	./samples/Dutch.txt:13:34 - Unknown word (doel)
log	./samples/Dutch.txt:13:42 - Unknown word (vrij)
log	./samples/Dutch.txt:13:47 - Unknown word (beschikbare)
log	./samples/Dutch.txt:13:59 - Unknown word (Nederlandstalige)
log	./samples/Dutch.txt:14:4 - Unknown word (taalhulpbestanden)
log	./samples/Dutch.txt:14:25 - Unknown word (ontwikkelen)
log	./samples/Dutch.txt:14:43 - Unknown word (verspreiden)
log	./samples/Dutch.txt:14:70 - Unknown word (gebruik)
log	./samples/Dutch.txt:15:4 - Unknown word (mogelijk)
log	./samples/Dutch.txt:15:16 - Unknown word (maken)
log	./samples/Dutch.txt:15:22 - Unknown word (zijn)
log	./samples/Dutch.txt:15:30 - Unknown word (taalhulpbestanden)
log	./samples/Dutch.txt:15:55 - Unknown word (beschikbaar)
log	./samples/Dutch.txt:15:67 - Unknown word (onder)
log	./samples/Dutch.txt:16:4 - Unknown word (onderstaande)
log	./samples/Dutch.txt:16:18 - Unknown word (liberale)
log	./samples/Dutch.txt:16:27 - Unknown word (licenties)
log	./samples/Dutch.txt:16:37 - Unknown word (naar)
log	./samples/Dutch.txt:16:42 - Unknown word (keuze)
log	./samples/Dutch.txt:16:55 - Unknown word (gebruiker)
log	./samples/Dutch.txt:16:68 - Unknown word (wordt)
log	./samples/Dutch.txt:17:4 - Unknown word (zeerste)
log	./samples/Dutch.txt:17:12 - Unknown word (aangeraden)
log	./samples/Dutch.txt:17:26 - Unknown word (voorafgaand)
log	./samples/Dutch.txt:17:46 - Unknown word (gebruik)
log	./samples/Dutch.txt:17:54 - Unknown word (kennis)
log	./samples/Dutch.txt:17:64 - Unknown word (nemen)
log	./samples/Dutch.txt:18:4 - Unknown word (toepasselijke)
log	./samples/Dutch.txt:18:18 - Unknown word (licentie)
log	./samples/Dutch.txt:19:12 - Unknown word (herziene)
log	./samples/Dutch.txt:19:21 - Unknown word (versie)
log	./samples/Dutch.txt:20:6 - Unknown word (Volledige)
log	./samples/Dutch.txt:20:16 - Unknown word (licentie)
log	./samples/Dutch.txt:21:6 - Unknown word (Samenvatting)
log	./samples/Dutch.txt:22:25 - Unknown word (Naamsvermelding)
log	./samples/Dutch.txt:22:46 - Unknown word (unported)
log	./samples/Dutch.txt:23:6 - Unknown word (Volledige)
log	./samples/Dutch.txt:23:16 - Unknown word (licentie)
log	./samples/Dutch.txt:24:6 - Unknown word (Samenvatting)
log	./samples/Dutch.txt:25:4 - Unknown word (Steun)
log	./samples/Dutch.txt:25:36 - Unknown word (vrijwilligersproject)
log	./samples/Dutch.txt:25:57 - Unknown word (zonder)
log	./samples/Dutch.txt:25:64 - Unknown word (winstoogmerk)
log	./samples/Dutch.txt:26:13 - Unknown word (kleine)
log	./samples/Dutch.txt:26:21 - Unknown word (financiële)
log	./samples/Dutch.txt:26:32 - Unknown word (steun)
log	./samples/Dutch.txt:26:51 - Unknown word (meer)
log	./samples/Dutch.txt:26:56 - Unknown word (activiteiten)
log	./samples/Dutch.txt:26:69 - Unknown word (ontplooien)
log	./samples/Dutch.txt:27:19 - Unknown word (professionaliseren)
log	./samples/Dutch.txt:27:42 - Unknown word (donatie)
log	./samples/Dutch.txt:27:63 - Unknown word (welkom)
log	./samples/Dutch.txt:28:4 - Unknown word (rekeningnummer)
log	./samples/Dutch.txt:28:39 - Unknown word (Stichting)
log	./samples/Dutch.txt:28:62 - Unknown word (giften)
log	./samples/Dutch.txt:28:69 - Unknown word (zijn)
log	./samples/Dutch.txt:29:4 - Unknown word (aftrekbaar)
log	./samples/Dutch.txt:29:22 - Unknown word (belasting)
log	./samples/Dutch.txt:29:33 - Unknown word (Stichting)
log	./samples/Dutch.txt:29:55 - Unknown word (namelijk)
log	./samples/Dutch.txt:30:4 - Unknown word (Belastingdienst)
log	./samples/Dutch.txt:30:20 - Unknown word (erkend)
log	./samples/Dutch.txt:30:31 - Unknown word (ANBI)
log	./samples/Dutch.txt:30:37 - Unknown word (oftewel)
log	./samples/Dutch.txt:30:46 - Unknown word (Algemeen)
log	./samples/Dutch.txt:30:59 - Unknown word (Beogende)
log	./samples/Dutch.txt:30:68 - Unknown word (Instelling)
log	./samples/Dutch.txt:32:4 - Unknown word (Meedoen)
log	./samples/Dutch.txt:32:13 - Unknown word (Iedereen)
log	./samples/Dutch.txt:32:25 - Unknown word (welkom)
log	./samples/Dutch.txt:32:42 - Unknown word (doen)
log	./samples/Dutch.txt:32:53 - Unknown word (fouten)
log	./samples/Dutch.txt:32:61 - Unknown word (discussieer)
log	./samples/Dutch.txt:33:7 - Unknown word (mailinglijst)
log	./samples/Dutch.txt:33:23 - Unknown word (draai)
log	./samples/Dutch.txt:33:52 - Unknown word (dragen)
log	./samples/Dutch.txt:33:75 - Unknown word (stemt)
log	./samples/Dutch.txt:34:6 - Unknown word (ermee)
log	./samples/Dutch.txt:34:22 - Unknown word (bijdrage)
log	./samples/Dutch.txt:34:39 - Unknown word (desbetreffende)
log	./samples/Dutch.txt:34:54 - Unknown word (taalhulpbestand)
log	./samples/Dutch.txt:34:70 - Unknown word (beschikbaar)
log	./samples/Dutch.txt:35:4 - Unknown word (komt)
log	./samples/Dutch.txt:35:9 - Unknown word (onder)
log	./samples/Dutch.txt:35:15 - Unknown word (vrije)
log	./samples/Dutch.txt:35:27 - Unknown word (opensource)
log	./samples/Dutch.txt:35:38 - Unknown word (licenties)
log	./samples/Dutch.txt:35:49 - Unknown word (Indien)
log	./samples/Dutch.txt:35:62 - Unknown word (wenst)
log	./samples/Dutch.txt:36:4 - Unknown word (naam)
log	./samples/Dutch.txt:36:23 - Unknown word (genoemd)
log	./samples/Dutch.txt:36:31 - Unknown word (worden)
log	./samples/Dutch.txt:36:42 - Unknown word (ontvangen)
log	./samples/Dutch.txt:36:55 - Unknown word (schriftelijk)
log	./samples/Dutch.txt:36:68 - Unknown word (verzoek)
log	./samples/Dutch.txt:37:4 - Unknown word (daarvoor)
log	./samples/Dutch.txt:37:13 - Unknown word (graag)
log	./samples/Dutch.txt:38:4 - Unknown word (Rechten)
log	./samples/Dutch.txt:38:16 - Unknown word (derden)
log	./samples/Dutch.txt:38:33 - Unknown word (respecteert)
log	./samples/Dutch.txt:38:48 - Unknown word (rechten)
log	./samples/Dutch.txt:38:60 - Unknown word (derden)
log	./samples/Dutch.txt:39:13 - Unknown word (gegevens)
log	./samples/Dutch.txt:39:22 - Unknown word (vrij)
log	./samples/Dutch.txt:39:27 - Unknown word (beschikbaar)
log	./samples/Dutch.txt:39:39 - Unknown word (houden)
log	./samples/Dutch.txt:39:47 - Unknown word (Voor)
log	./samples/Dutch.txt:39:52 - Unknown word (bijdragen)
log	./samples/Dutch.txt:40:6 - Unknown word (daarom)
log	./samples/Dutch.txt:40:13 - Unknown word (niet)
log	./samples/Dutch.txt:40:18 - Unknown word (zonder)
log	./samples/Dutch.txt:40:25 - Unknown word (toestemming)
log	./samples/Dutch.txt:40:37 - Unknown word (gebruikmaken)
log	./samples/Dutch.txt:40:54 - Unknown word (beschermde)
log	./samples/Dutch.txt:40:65 - Unknown word (naslagwerken)
log	./samples/Dutch.txt:41:4 - Unknown word (zoals)
log	./samples/Dutch.txt:41:10 - Unknown word (woordenboeken)
log	./samples/Dutch.txt:41:36 - Unknown word (toegestaan)
log	./samples/Dutch.txt:41:50 - Unknown word (gebruik)
log	./samples/Dutch.txt:41:61 - Unknown word (maken)
log	./samples/Dutch.txt:42:4 - Unknown word (materialen)
log	./samples/Dutch.txt:42:22 - Unknown word (Nederlandse)
log	./samples/Dutch.txt:42:34 - Unknown word (Taalunie)
log	./samples/Dutch.txt:42:44 - Unknown word (zoals)
log	./samples/Dutch.txt:42:53 - Unknown word (leidraad)
log	./samples/Dutch.txt:42:68 - Unknown word (woordenlijst)
log	./samples/Dutch.txt:43:4 - Unknown word (Indien)
log	./samples/Dutch.txt:43:17 - Unknown word (mening)
log	./samples/Dutch.txt:43:42 - Unknown word (inbreuk)
log	./samples/Dutch.txt:43:50 - Unknown word (maakt)
log	./samples/Dutch.txt:43:62 - Unknown word (rechten)
log	./samples/Dutch.txt:44:4 - Unknown word (verzoeken)
log	./samples/Dutch.txt:44:19 - Unknown word (hierover)
log	./samples/Dutch.txt:44:31 - Unknown word (spoedig)
log	./samples/Dutch.txt:44:39 - Unknown word (mogelijk)
log	./samples/Dutch.txt:44:48 - Unknown word (schriftelijk)
log	./samples/Dutch.txt:45:7 - Unknown word (nemen)
log	./samples/Dutch.txt:46:13 - Unknown word (Stichting)
log	./samples/Dutch.txt:59:56 - Unknown word (Brouwer)
log	./samples/Dutch.txt:60:11 - Unknown word (Nederlandstalige)
log	./samples/Dutch.txt:60:32 - Unknown word (Gebruikersgroep)
log	./samples/Dutch.txt:68:42 - Unknown word (unported)
log	./samples/Dutch.txt:74:39 - Unknown word (RABONL)
log	./samples/Dutch.txt:74:49 - Unknown word (IBAN)
log	./samples/Dutch.txt:74:59 - Unknown word (RABO)
log	./samples/Dutch.txt:75:4 - Unknown word (Stichting)
log	./samples/Dutch.txt:77:58 - Unknown word (algemeen)
log	./samples/Dutch.txt:77:71 - Unknown word (beogende)
log	./samples/Dutch.txt:78:4 - Unknown word (instelling)
log	./samples/Dutch.txt:78:18 - Unknown word (ANBI)
error	CSpell: Files checked: 1, Issues found: 189 in 1 files"
`;

exports[`Validate cli app trace hello Expect Error: undefined 1`] = `Array []`;

exports[`Validate cli app trace help Expect Error: outputHelp 1`] = `
Array [
  "Usage: cspell trace [options] <words...>",
  "",
  "Trace words",
  "  Search for words in the configuration and dictionaries.",
  "",
  "Options:",
  "  -c, --config <cspell.json>  Configuration file to use.  By default cspell",
  "                              looks for cspell.json in the current directory.",
  "  --locale <locale>           Set language locales. i.e. \\"en,fr\\" for English",
  "                              and French, or \\"en-GB\\" for British English.",
  "  --languageId <language>     Force programming language for unknown",
  "                              extensions. i.e. \\"php\\" or \\"scala\\"",
  "  --no-color                  Turn off color.",
  "  --color                     Force color",
  "  -h, --help                  display help for command",
  "",
]
`;

exports[`Validate cli app trace missing dictionary Expect Error: [Function CheckFailed] 1`] = `Array []`;

exports[`Validate cli app trace not-in-any-dictionary Expect Error: [Function CheckFailed] 1`] = `Array []`;

exports[`Validate cli app with errors and excludes Expect Error: [Function CheckFailed] 1`] = `Array []`;

exports[`Validate cli app with errors and excludes Expect Error: [Function CheckFailed] 2`] = `
"error	1/6 ./samples/cspell-bad.json 0.00ms
error	2/6 ./samples/cspell-includes.json 0.00ms
error	3/6 ./samples/cspell-missing-dict.json 0.00ms
error	4/6 ./samples/sample.c 0.00ms
error	5/6 ./samples/sample.py 0.00ms
error	6/6 ./samples/text.txt 0.00ms X
log	./samples/text.txt:1:14 - Unknown word (fulll)
log	./samples/text.txt:1:23 - Unknown word (errrorrrs)
log	./samples/text.txt:3:4 - Unknown word (hass)
log	./samples/text.txt:3:9 - Unknown word (someissues)
log	./samples/text.txt:3:23 - Unknown word (everyline)
log	./samples/text.txt:5:24 - Unknown word (okkk)
log	./samples/text.txt:5:32 - Unknown word (reead)
error	CSpell: Files checked: 6, Issues found: 7 in 1 files"
`;

exports[`Validate cli app with forbidden words Expect Error: [Function CheckFailed] 1`] = `Array []`;

exports[`Validate cli app with forbidden words Expect Error: [Function CheckFailed] 2`] = `
"error	1/1 ./samples/src/sample-with-forbidden-words.md 0.00ms X
log	./samples/src/sample-with-forbidden-words.md:3:3 - Forbidden word (behaviour)
log	./samples/src/sample-with-forbidden-words.md:4:3 - Forbidden word (flavour)
log	./samples/src/sample-with-forbidden-words.md:5:3 - Forbidden word (colour)
error	CSpell: Files checked: 1, Issues found: 3 in 1 files"
`;

exports[`Validate cli app with spelling errors --debug Dutch.txt Expect Error: [Function CheckFailed] 1`] = `Array []`;

exports[`Validate cli app with spelling errors --silent Dutch.txt Expect Error: [Function CheckFailed] 1`] = `Array []`;

exports[`Validate cli app with spelling errors --silent Dutch.txt Expect Error: [Function CheckFailed] 2`] = `""`;

exports[`Validate cli app with spelling errors Dutch.txt --legacy Expect Error: [Function CheckFailed] 1`] = `Array []`;

exports[`Validate cli app with spelling errors Dutch.txt --legacy Expect Error: [Function CheckFailed] 2`] = `
"error	1/1 ./samples/Dutch.txt 0.00ms X
log	./samples/Dutch.txt[1, 32]: Unknown word: NEDERLANDS
log	./samples/Dutch.txt[2, 11]: Unknown word: wordt
log	./samples/Dutch.txt[2, 17]: Unknown word: vriendelijk
log	./samples/Dutch.txt[2, 29]: Unknown word: verzocht
log	./samples/Dutch.txt[2, 45]: Unknown word: bestand
log	./samples/Dutch.txt[3, 10]: Unknown word: lezen
log	./samples/Dutch.txt[3, 26]: Unknown word: leveren
log	./samples/Dutch.txt[3, 38]: Unknown word: iedere
log	./samples/Dutch.txt[3, 45]: Unknown word: kopie
log	./samples/Dutch.txt[3, 59]: Unknown word: taalhulpbestand
log	./samples/Dutch.txt[5, 4]: Unknown word: Naam
log	./samples/Dutch.txt[5, 10]: Unknown word: Nederlandstalige
log	./samples/Dutch.txt[5, 27]: Unknown word: woordenlijst
log	./samples/Dutch.txt[5, 40]: Unknown word: voor
log	./samples/Dutch.txt[5, 45]: Unknown word: spellingcontrole
log	./samples/Dutch.txt[6, 4]: Unknown word: Versie
log	./samples/Dutch.txt[6, 11]: Unknown word: woordenlijst
log	./samples/Dutch.txt[6, 32]: Unknown word: versie
log	./samples/Dutch.txt[6, 39]: Unknown word: spellingcontrole
log	./samples/Dutch.txt[7, 4]: Unknown word: Vereisten
log	./samples/Dutch.txt[7, 33]: Unknown word: hoger
log	./samples/Dutch.txt[8, 4]: Unknown word: Keurmerk
log	./samples/Dutch.txt[8, 22]: Unknown word: Nederlandse
log	./samples/Dutch.txt[8, 34]: Unknown word: Taalunie
log	./samples/Dutch.txt[8, 47]: Unknown word: lijst
log	./samples/Dutch.txt[8, 57]: Unknown word: basiswoorden
log	./samples/Dutch.txt[9, 13]: Unknown word: draagt
log	./samples/Dutch.txt[9, 24]: Unknown word: keurmerk
log	./samples/Dutch.txt[9, 40]: Unknown word: Nederlandse
log	./samples/Dutch.txt[9, 52]: Unknown word: Taalunie
log	./samples/Dutch.txt[9, 62]: Unknown word: Voor
log	./samples/Dutch.txt[9, 67]: Unknown word: meer
log	./samples/Dutch.txt[10, 4]: Unknown word: informatie
log	./samples/Dutch.txt[11, 4]: Unknown word: Auteursrechten
log	./samples/Dutch.txt[11, 60]: Unknown word: Brouwer
log	./samples/Dutch.txt[12, 11]: Unknown word: Nederlandstalige
log	./samples/Dutch.txt[12, 32]: Unknown word: Gebruikersgroep
log	./samples/Dutch.txt[13, 4]: Unknown word: Licenties
log	./samples/Dutch.txt[13, 24]: Unknown word: heeft
log	./samples/Dutch.txt[13, 34]: Unknown word: doel
log	./samples/Dutch.txt[13, 42]: Unknown word: vrij
log	./samples/Dutch.txt[13, 47]: Unknown word: beschikbare
log	./samples/Dutch.txt[13, 59]: Unknown word: Nederlandstalige
log	./samples/Dutch.txt[14, 4]: Unknown word: taalhulpbestanden
log	./samples/Dutch.txt[14, 25]: Unknown word: ontwikkelen
log	./samples/Dutch.txt[14, 43]: Unknown word: verspreiden
log	./samples/Dutch.txt[14, 70]: Unknown word: gebruik
log	./samples/Dutch.txt[15, 4]: Unknown word: mogelijk
log	./samples/Dutch.txt[15, 16]: Unknown word: maken
log	./samples/Dutch.txt[15, 22]: Unknown word: zijn
log	./samples/Dutch.txt[15, 30]: Unknown word: taalhulpbestanden
log	./samples/Dutch.txt[15, 55]: Unknown word: beschikbaar
log	./samples/Dutch.txt[15, 67]: Unknown word: onder
log	./samples/Dutch.txt[16, 4]: Unknown word: onderstaande
log	./samples/Dutch.txt[16, 18]: Unknown word: liberale
log	./samples/Dutch.txt[16, 27]: Unknown word: licenties
log	./samples/Dutch.txt[16, 37]: Unknown word: naar
log	./samples/Dutch.txt[16, 42]: Unknown word: keuze
log	./samples/Dutch.txt[16, 55]: Unknown word: gebruiker
log	./samples/Dutch.txt[16, 68]: Unknown word: wordt
log	./samples/Dutch.txt[17, 4]: Unknown word: zeerste
log	./samples/Dutch.txt[17, 12]: Unknown word: aangeraden
log	./samples/Dutch.txt[17, 26]: Unknown word: voorafgaand
log	./samples/Dutch.txt[17, 46]: Unknown word: gebruik
log	./samples/Dutch.txt[17, 54]: Unknown word: kennis
log	./samples/Dutch.txt[17, 64]: Unknown word: nemen
log	./samples/Dutch.txt[18, 4]: Unknown word: toepasselijke
log	./samples/Dutch.txt[18, 18]: Unknown word: licentie
log	./samples/Dutch.txt[19, 12]: Unknown word: herziene
log	./samples/Dutch.txt[19, 21]: Unknown word: versie
log	./samples/Dutch.txt[20, 6]: Unknown word: Volledige
log	./samples/Dutch.txt[20, 16]: Unknown word: licentie
log	./samples/Dutch.txt[21, 6]: Unknown word: Samenvatting
log	./samples/Dutch.txt[22, 25]: Unknown word: Naamsvermelding
log	./samples/Dutch.txt[22, 46]: Unknown word: unported
log	./samples/Dutch.txt[23, 6]: Unknown word: Volledige
log	./samples/Dutch.txt[23, 16]: Unknown word: licentie
log	./samples/Dutch.txt[24, 6]: Unknown word: Samenvatting
log	./samples/Dutch.txt[25, 4]: Unknown word: Steun
log	./samples/Dutch.txt[25, 36]: Unknown word: vrijwilligersproject
log	./samples/Dutch.txt[25, 57]: Unknown word: zonder
log	./samples/Dutch.txt[25, 64]: Unknown word: winstoogmerk
log	./samples/Dutch.txt[26, 13]: Unknown word: kleine
log	./samples/Dutch.txt[26, 21]: Unknown word: financiële
log	./samples/Dutch.txt[26, 32]: Unknown word: steun
log	./samples/Dutch.txt[26, 51]: Unknown word: meer
log	./samples/Dutch.txt[26, 56]: Unknown word: activiteiten
log	./samples/Dutch.txt[26, 69]: Unknown word: ontplooien
log	./samples/Dutch.txt[27, 19]: Unknown word: professionaliseren
log	./samples/Dutch.txt[27, 42]: Unknown word: donatie
log	./samples/Dutch.txt[27, 63]: Unknown word: welkom
log	./samples/Dutch.txt[28, 4]: Unknown word: rekeningnummer
log	./samples/Dutch.txt[28, 39]: Unknown word: Stichting
log	./samples/Dutch.txt[28, 62]: Unknown word: giften
log	./samples/Dutch.txt[28, 69]: Unknown word: zijn
log	./samples/Dutch.txt[29, 4]: Unknown word: aftrekbaar
log	./samples/Dutch.txt[29, 22]: Unknown word: belasting
log	./samples/Dutch.txt[29, 33]: Unknown word: Stichting
log	./samples/Dutch.txt[29, 55]: Unknown word: namelijk
log	./samples/Dutch.txt[30, 4]: Unknown word: Belastingdienst
log	./samples/Dutch.txt[30, 20]: Unknown word: erkend
log	./samples/Dutch.txt[30, 31]: Unknown word: ANBI
log	./samples/Dutch.txt[30, 37]: Unknown word: oftewel
log	./samples/Dutch.txt[30, 46]: Unknown word: Algemeen
log	./samples/Dutch.txt[30, 59]: Unknown word: Beogende
log	./samples/Dutch.txt[30, 68]: Unknown word: Instelling
log	./samples/Dutch.txt[32, 4]: Unknown word: Meedoen
log	./samples/Dutch.txt[32, 13]: Unknown word: Iedereen
log	./samples/Dutch.txt[32, 25]: Unknown word: welkom
log	./samples/Dutch.txt[32, 42]: Unknown word: doen
log	./samples/Dutch.txt[32, 53]: Unknown word: fouten
log	./samples/Dutch.txt[32, 61]: Unknown word: discussieer
log	./samples/Dutch.txt[33, 7]: Unknown word: mailinglijst
log	./samples/Dutch.txt[33, 23]: Unknown word: draai
log	./samples/Dutch.txt[33, 52]: Unknown word: dragen
log	./samples/Dutch.txt[33, 75]: Unknown word: stemt
log	./samples/Dutch.txt[34, 6]: Unknown word: ermee
log	./samples/Dutch.txt[34, 22]: Unknown word: bijdrage
log	./samples/Dutch.txt[34, 39]: Unknown word: desbetreffende
log	./samples/Dutch.txt[34, 54]: Unknown word: taalhulpbestand
log	./samples/Dutch.txt[34, 70]: Unknown word: beschikbaar
log	./samples/Dutch.txt[35, 4]: Unknown word: komt
log	./samples/Dutch.txt[35, 9]: Unknown word: onder
log	./samples/Dutch.txt[35, 15]: Unknown word: vrije
log	./samples/Dutch.txt[35, 27]: Unknown word: opensource
log	./samples/Dutch.txt[35, 38]: Unknown word: licenties
log	./samples/Dutch.txt[35, 49]: Unknown word: Indien
log	./samples/Dutch.txt[35, 62]: Unknown word: wenst
log	./samples/Dutch.txt[36, 4]: Unknown word: naam
log	./samples/Dutch.txt[36, 23]: Unknown word: genoemd
log	./samples/Dutch.txt[36, 31]: Unknown word: worden
log	./samples/Dutch.txt[36, 42]: Unknown word: ontvangen
log	./samples/Dutch.txt[36, 55]: Unknown word: schriftelijk
log	./samples/Dutch.txt[36, 68]: Unknown word: verzoek
log	./samples/Dutch.txt[37, 4]: Unknown word: daarvoor
log	./samples/Dutch.txt[37, 13]: Unknown word: graag
log	./samples/Dutch.txt[38, 4]: Unknown word: Rechten
log	./samples/Dutch.txt[38, 16]: Unknown word: derden
log	./samples/Dutch.txt[38, 33]: Unknown word: respecteert
log	./samples/Dutch.txt[38, 48]: Unknown word: rechten
log	./samples/Dutch.txt[38, 60]: Unknown word: derden
log	./samples/Dutch.txt[39, 13]: Unknown word: gegevens
log	./samples/Dutch.txt[39, 22]: Unknown word: vrij
log	./samples/Dutch.txt[39, 27]: Unknown word: beschikbaar
log	./samples/Dutch.txt[39, 39]: Unknown word: houden
log	./samples/Dutch.txt[39, 47]: Unknown word: Voor
log	./samples/Dutch.txt[39, 52]: Unknown word: bijdragen
log	./samples/Dutch.txt[40, 6]: Unknown word: daarom
log	./samples/Dutch.txt[40, 13]: Unknown word: niet
log	./samples/Dutch.txt[40, 18]: Unknown word: zonder
log	./samples/Dutch.txt[40, 25]: Unknown word: toestemming
log	./samples/Dutch.txt[40, 37]: Unknown word: gebruikmaken
log	./samples/Dutch.txt[40, 54]: Unknown word: beschermde
log	./samples/Dutch.txt[40, 65]: Unknown word: naslagwerken
log	./samples/Dutch.txt[41, 4]: Unknown word: zoals
log	./samples/Dutch.txt[41, 10]: Unknown word: woordenboeken
log	./samples/Dutch.txt[41, 36]: Unknown word: toegestaan
log	./samples/Dutch.txt[41, 50]: Unknown word: gebruik
log	./samples/Dutch.txt[41, 61]: Unknown word: maken
log	./samples/Dutch.txt[42, 4]: Unknown word: materialen
log	./samples/Dutch.txt[42, 22]: Unknown word: Nederlandse
log	./samples/Dutch.txt[42, 34]: Unknown word: Taalunie
log	./samples/Dutch.txt[42, 44]: Unknown word: zoals
log	./samples/Dutch.txt[42, 53]: Unknown word: leidraad
log	./samples/Dutch.txt[42, 68]: Unknown word: woordenlijst
log	./samples/Dutch.txt[43, 4]: Unknown word: Indien
log	./samples/Dutch.txt[43, 17]: Unknown word: mening
log	./samples/Dutch.txt[43, 42]: Unknown word: inbreuk
log	./samples/Dutch.txt[43, 50]: Unknown word: maakt
log	./samples/Dutch.txt[43, 62]: Unknown word: rechten
log	./samples/Dutch.txt[44, 4]: Unknown word: verzoeken
log	./samples/Dutch.txt[44, 19]: Unknown word: hierover
log	./samples/Dutch.txt[44, 31]: Unknown word: spoedig
log	./samples/Dutch.txt[44, 39]: Unknown word: mogelijk
log	./samples/Dutch.txt[44, 48]: Unknown word: schriftelijk
log	./samples/Dutch.txt[45, 7]: Unknown word: nemen
log	./samples/Dutch.txt[46, 13]: Unknown word: Stichting
log	./samples/Dutch.txt[59, 56]: Unknown word: Brouwer
log	./samples/Dutch.txt[60, 11]: Unknown word: Nederlandstalige
log	./samples/Dutch.txt[60, 32]: Unknown word: Gebruikersgroep
log	./samples/Dutch.txt[68, 42]: Unknown word: unported
log	./samples/Dutch.txt[74, 39]: Unknown word: RABONL
log	./samples/Dutch.txt[74, 49]: Unknown word: IBAN
log	./samples/Dutch.txt[74, 59]: Unknown word: RABO
log	./samples/Dutch.txt[75, 4]: Unknown word: Stichting
log	./samples/Dutch.txt[77, 58]: Unknown word: algemeen
log	./samples/Dutch.txt[77, 71]: Unknown word: beogende
log	./samples/Dutch.txt[78, 4]: Unknown word: instelling
log	./samples/Dutch.txt[78, 18]: Unknown word: ANBI
error	CSpell: Files checked: 1, Issues found: 189 in 1 files"
`;

exports[`Validate cli app with spelling errors Dutch.txt Expect Error: [Function CheckFailed] 1`] = `Array []`;

exports[`Validate cli app with spelling errors Dutch.txt Expect Error: [Function CheckFailed] 2`] = `
"error	1/1 ./samples/Dutch.txt 0.00ms X
log	./samples/Dutch.txt:1:32 - Unknown word (NEDERLANDS)
log	./samples/Dutch.txt:2:11 - Unknown word (wordt)
log	./samples/Dutch.txt:2:17 - Unknown word (vriendelijk)
log	./samples/Dutch.txt:2:29 - Unknown word (verzocht)
log	./samples/Dutch.txt:2:45 - Unknown word (bestand)
log	./samples/Dutch.txt:3:10 - Unknown word (lezen)
log	./samples/Dutch.txt:3:26 - Unknown word (leveren)
log	./samples/Dutch.txt:3:38 - Unknown word (iedere)
log	./samples/Dutch.txt:3:45 - Unknown word (kopie)
log	./samples/Dutch.txt:3:59 - Unknown word (taalhulpbestand)
log	./samples/Dutch.txt:5:4 - Unknown word (Naam)
log	./samples/Dutch.txt:5:10 - Unknown word (Nederlandstalige)
log	./samples/Dutch.txt:5:27 - Unknown word (woordenlijst)
log	./samples/Dutch.txt:5:40 - Unknown word (voor)
log	./samples/Dutch.txt:5:45 - Unknown word (spellingcontrole)
log	./samples/Dutch.txt:6:4 - Unknown word (Versie)
log	./samples/Dutch.txt:6:11 - Unknown word (woordenlijst)
log	./samples/Dutch.txt:6:32 - Unknown word (versie)
log	./samples/Dutch.txt:6:39 - Unknown word (spellingcontrole)
log	./samples/Dutch.txt:7:4 - Unknown word (Vereisten)
log	./samples/Dutch.txt:7:33 - Unknown word (hoger)
log	./samples/Dutch.txt:8:4 - Unknown word (Keurmerk)
log	./samples/Dutch.txt:8:22 - Unknown word (Nederlandse)
log	./samples/Dutch.txt:8:34 - Unknown word (Taalunie)
log	./samples/Dutch.txt:8:47 - Unknown word (lijst)
log	./samples/Dutch.txt:8:57 - Unknown word (basiswoorden)
log	./samples/Dutch.txt:9:13 - Unknown word (draagt)
log	./samples/Dutch.txt:9:24 - Unknown word (keurmerk)
log	./samples/Dutch.txt:9:40 - Unknown word (Nederlandse)
log	./samples/Dutch.txt:9:52 - Unknown word (Taalunie)
log	./samples/Dutch.txt:9:62 - Unknown word (Voor)
log	./samples/Dutch.txt:9:67 - Unknown word (meer)
log	./samples/Dutch.txt:10:4 - Unknown word (informatie)
log	./samples/Dutch.txt:11:4 - Unknown word (Auteursrechten)
log	./samples/Dutch.txt:11:60 - Unknown word (Brouwer)
log	./samples/Dutch.txt:12:11 - Unknown word (Nederlandstalige)
log	./samples/Dutch.txt:12:32 - Unknown word (Gebruikersgroep)
log	./samples/Dutch.txt:13:4 - Unknown word (Licenties)
log	./samples/Dutch.txt:13:24 - Unknown word (heeft)
log	./samples/Dutch.txt:13:34 - Unknown word (doel)
log	./samples/Dutch.txt:13:42 - Unknown word (vrij)
log	./samples/Dutch.txt:13:47 - Unknown word (beschikbare)
log	./samples/Dutch.txt:13:59 - Unknown word (Nederlandstalige)
log	./samples/Dutch.txt:14:4 - Unknown word (taalhulpbestanden)
log	./samples/Dutch.txt:14:25 - Unknown word (ontwikkelen)
log	./samples/Dutch.txt:14:43 - Unknown word (verspreiden)
log	./samples/Dutch.txt:14:70 - Unknown word (gebruik)
log	./samples/Dutch.txt:15:4 - Unknown word (mogelijk)
log	./samples/Dutch.txt:15:16 - Unknown word (maken)
log	./samples/Dutch.txt:15:22 - Unknown word (zijn)
log	./samples/Dutch.txt:15:30 - Unknown word (taalhulpbestanden)
log	./samples/Dutch.txt:15:55 - Unknown word (beschikbaar)
log	./samples/Dutch.txt:15:67 - Unknown word (onder)
log	./samples/Dutch.txt:16:4 - Unknown word (onderstaande)
log	./samples/Dutch.txt:16:18 - Unknown word (liberale)
log	./samples/Dutch.txt:16:27 - Unknown word (licenties)
log	./samples/Dutch.txt:16:37 - Unknown word (naar)
log	./samples/Dutch.txt:16:42 - Unknown word (keuze)
log	./samples/Dutch.txt:16:55 - Unknown word (gebruiker)
log	./samples/Dutch.txt:16:68 - Unknown word (wordt)
log	./samples/Dutch.txt:17:4 - Unknown word (zeerste)
log	./samples/Dutch.txt:17:12 - Unknown word (aangeraden)
log	./samples/Dutch.txt:17:26 - Unknown word (voorafgaand)
log	./samples/Dutch.txt:17:46 - Unknown word (gebruik)
log	./samples/Dutch.txt:17:54 - Unknown word (kennis)
log	./samples/Dutch.txt:17:64 - Unknown word (nemen)
log	./samples/Dutch.txt:18:4 - Unknown word (toepasselijke)
log	./samples/Dutch.txt:18:18 - Unknown word (licentie)
log	./samples/Dutch.txt:19:12 - Unknown word (herziene)
log	./samples/Dutch.txt:19:21 - Unknown word (versie)
log	./samples/Dutch.txt:20:6 - Unknown word (Volledige)
log	./samples/Dutch.txt:20:16 - Unknown word (licentie)
log	./samples/Dutch.txt:21:6 - Unknown word (Samenvatting)
log	./samples/Dutch.txt:22:25 - Unknown word (Naamsvermelding)
log	./samples/Dutch.txt:22:46 - Unknown word (unported)
log	./samples/Dutch.txt:23:6 - Unknown word (Volledige)
log	./samples/Dutch.txt:23:16 - Unknown word (licentie)
log	./samples/Dutch.txt:24:6 - Unknown word (Samenvatting)
log	./samples/Dutch.txt:25:4 - Unknown word (Steun)
log	./samples/Dutch.txt:25:36 - Unknown word (vrijwilligersproject)
log	./samples/Dutch.txt:25:57 - Unknown word (zonder)
log	./samples/Dutch.txt:25:64 - Unknown word (winstoogmerk)
log	./samples/Dutch.txt:26:13 - Unknown word (kleine)
log	./samples/Dutch.txt:26:21 - Unknown word (financiële)
log	./samples/Dutch.txt:26:32 - Unknown word (steun)
log	./samples/Dutch.txt:26:51 - Unknown word (meer)
log	./samples/Dutch.txt:26:56 - Unknown word (activiteiten)
log	./samples/Dutch.txt:26:69 - Unknown word (ontplooien)
log	./samples/Dutch.txt:27:19 - Unknown word (professionaliseren)
log	./samples/Dutch.txt:27:42 - Unknown word (donatie)
log	./samples/Dutch.txt:27:63 - Unknown word (welkom)
log	./samples/Dutch.txt:28:4 - Unknown word (rekeningnummer)
log	./samples/Dutch.txt:28:39 - Unknown word (Stichting)
log	./samples/Dutch.txt:28:62 - Unknown word (giften)
log	./samples/Dutch.txt:28:69 - Unknown word (zijn)
log	./samples/Dutch.txt:29:4 - Unknown word (aftrekbaar)
log	./samples/Dutch.txt:29:22 - Unknown word (belasting)
log	./samples/Dutch.txt:29:33 - Unknown word (Stichting)
log	./samples/Dutch.txt:29:55 - Unknown word (namelijk)
log	./samples/Dutch.txt:30:4 - Unknown word (Belastingdienst)
log	./samples/Dutch.txt:30:20 - Unknown word (erkend)
log	./samples/Dutch.txt:30:31 - Unknown word (ANBI)
log	./samples/Dutch.txt:30:37 - Unknown word (oftewel)
log	./samples/Dutch.txt:30:46 - Unknown word (Algemeen)
log	./samples/Dutch.txt:30:59 - Unknown word (Beogende)
log	./samples/Dutch.txt:30:68 - Unknown word (Instelling)
log	./samples/Dutch.txt:32:4 - Unknown word (Meedoen)
log	./samples/Dutch.txt:32:13 - Unknown word (Iedereen)
log	./samples/Dutch.txt:32:25 - Unknown word (welkom)
log	./samples/Dutch.txt:32:42 - Unknown word (doen)
log	./samples/Dutch.txt:32:53 - Unknown word (fouten)
log	./samples/Dutch.txt:32:61 - Unknown word (discussieer)
log	./samples/Dutch.txt:33:7 - Unknown word (mailinglijst)
log	./samples/Dutch.txt:33:23 - Unknown word (draai)
log	./samples/Dutch.txt:33:52 - Unknown word (dragen)
log	./samples/Dutch.txt:33:75 - Unknown word (stemt)
log	./samples/Dutch.txt:34:6 - Unknown word (ermee)
log	./samples/Dutch.txt:34:22 - Unknown word (bijdrage)
log	./samples/Dutch.txt:34:39 - Unknown word (desbetreffende)
log	./samples/Dutch.txt:34:54 - Unknown word (taalhulpbestand)
log	./samples/Dutch.txt:34:70 - Unknown word (beschikbaar)
log	./samples/Dutch.txt:35:4 - Unknown word (komt)
log	./samples/Dutch.txt:35:9 - Unknown word (onder)
log	./samples/Dutch.txt:35:15 - Unknown word (vrije)
log	./samples/Dutch.txt:35:27 - Unknown word (opensource)
log	./samples/Dutch.txt:35:38 - Unknown word (licenties)
log	./samples/Dutch.txt:35:49 - Unknown word (Indien)
log	./samples/Dutch.txt:35:62 - Unknown word (wenst)
log	./samples/Dutch.txt:36:4 - Unknown word (naam)
log	./samples/Dutch.txt:36:23 - Unknown word (genoemd)
log	./samples/Dutch.txt:36:31 - Unknown word (worden)
log	./samples/Dutch.txt:36:42 - Unknown word (ontvangen)
log	./samples/Dutch.txt:36:55 - Unknown word (schriftelijk)
log	./samples/Dutch.txt:36:68 - Unknown word (verzoek)
log	./samples/Dutch.txt:37:4 - Unknown word (daarvoor)
log	./samples/Dutch.txt:37:13 - Unknown word (graag)
log	./samples/Dutch.txt:38:4 - Unknown word (Rechten)
log	./samples/Dutch.txt:38:16 - Unknown word (derden)
log	./samples/Dutch.txt:38:33 - Unknown word (respecteert)
log	./samples/Dutch.txt:38:48 - Unknown word (rechten)
log	./samples/Dutch.txt:38:60 - Unknown word (derden)
log	./samples/Dutch.txt:39:13 - Unknown word (gegevens)
log	./samples/Dutch.txt:39:22 - Unknown word (vrij)
log	./samples/Dutch.txt:39:27 - Unknown word (beschikbaar)
log	./samples/Dutch.txt:39:39 - Unknown word (houden)
log	./samples/Dutch.txt:39:47 - Unknown word (Voor)
log	./samples/Dutch.txt:39:52 - Unknown word (bijdragen)
log	./samples/Dutch.txt:40:6 - Unknown word (daarom)
log	./samples/Dutch.txt:40:13 - Unknown word (niet)
log	./samples/Dutch.txt:40:18 - Unknown word (zonder)
log	./samples/Dutch.txt:40:25 - Unknown word (toestemming)
log	./samples/Dutch.txt:40:37 - Unknown word (gebruikmaken)
log	./samples/Dutch.txt:40:54 - Unknown word (beschermde)
log	./samples/Dutch.txt:40:65 - Unknown word (naslagwerken)
log	./samples/Dutch.txt:41:4 - Unknown word (zoals)
log	./samples/Dutch.txt:41:10 - Unknown word (woordenboeken)
log	./samples/Dutch.txt:41:36 - Unknown word (toegestaan)
log	./samples/Dutch.txt:41:50 - Unknown word (gebruik)
log	./samples/Dutch.txt:41:61 - Unknown word (maken)
log	./samples/Dutch.txt:42:4 - Unknown word (materialen)
log	./samples/Dutch.txt:42:22 - Unknown word (Nederlandse)
log	./samples/Dutch.txt:42:34 - Unknown word (Taalunie)
log	./samples/Dutch.txt:42:44 - Unknown word (zoals)
log	./samples/Dutch.txt:42:53 - Unknown word (leidraad)
log	./samples/Dutch.txt:42:68 - Unknown word (woordenlijst)
log	./samples/Dutch.txt:43:4 - Unknown word (Indien)
log	./samples/Dutch.txt:43:17 - Unknown word (mening)
log	./samples/Dutch.txt:43:42 - Unknown word (inbreuk)
log	./samples/Dutch.txt:43:50 - Unknown word (maakt)
log	./samples/Dutch.txt:43:62 - Unknown word (rechten)
log	./samples/Dutch.txt:44:4 - Unknown word (verzoeken)
log	./samples/Dutch.txt:44:19 - Unknown word (hierover)
log	./samples/Dutch.txt:44:31 - Unknown word (spoedig)
log	./samples/Dutch.txt:44:39 - Unknown word (mogelijk)
log	./samples/Dutch.txt:44:48 - Unknown word (schriftelijk)
log	./samples/Dutch.txt:45:7 - Unknown word (nemen)
log	./samples/Dutch.txt:46:13 - Unknown word (Stichting)
log	./samples/Dutch.txt:59:56 - Unknown word (Brouwer)
log	./samples/Dutch.txt:60:11 - Unknown word (Nederlandstalige)
log	./samples/Dutch.txt:60:32 - Unknown word (Gebruikersgroep)
log	./samples/Dutch.txt:68:42 - Unknown word (unported)
log	./samples/Dutch.txt:74:39 - Unknown word (RABONL)
log	./samples/Dutch.txt:74:49 - Unknown word (IBAN)
log	./samples/Dutch.txt:74:59 - Unknown word (RABO)
log	./samples/Dutch.txt:75:4 - Unknown word (Stichting)
log	./samples/Dutch.txt:77:58 - Unknown word (algemeen)
log	./samples/Dutch.txt:77:71 - Unknown word (beogende)
log	./samples/Dutch.txt:78:4 - Unknown word (instelling)
log	./samples/Dutch.txt:78:18 - Unknown word (ANBI)
error	CSpell: Files checked: 1, Issues found: 189 in 1 files"
`;

exports[`Validate cli app with spelling errors Dutch.txt words only Expect Error: [Function CheckFailed] 1`] = `Array []`;

exports[`Validate cli app with spelling errors Dutch.txt words only Expect Error: [Function CheckFailed] 2`] = `
"error	1/1 ./samples/Dutch.txt 0.00ms X
log	NEDERLANDS
log	wordt
log	vriendelijk
log	verzocht
log	bestand
log	lezen
log	leveren
log	iedere
log	kopie
log	taalhulpbestand
log	Naam
log	Nederlandstalige
log	woordenlijst
log	voor
log	spellingcontrole
log	Versie
log	woordenlijst
log	versie
log	spellingcontrole
log	Vereisten
log	hoger
log	Keurmerk
log	Nederlandse
log	Taalunie
log	lijst
log	basiswoorden
log	draagt
log	keurmerk
log	Nederlandse
log	Taalunie
log	Voor
log	meer
log	informatie
log	Auteursrechten
log	Brouwer
log	Nederlandstalige
log	Gebruikersgroep
log	Licenties
log	heeft
log	doel
log	vrij
log	beschikbare
log	Nederlandstalige
log	taalhulpbestanden
log	ontwikkelen
log	verspreiden
log	gebruik
log	mogelijk
log	maken
log	zijn
log	taalhulpbestanden
log	beschikbaar
log	onder
log	onderstaande
log	liberale
log	licenties
log	naar
log	keuze
log	gebruiker
log	wordt
log	zeerste
log	aangeraden
log	voorafgaand
log	gebruik
log	kennis
log	nemen
log	toepasselijke
log	licentie
log	herziene
log	versie
log	Volledige
log	licentie
log	Samenvatting
log	Naamsvermelding
log	unported
log	Volledige
log	licentie
log	Samenvatting
log	Steun
log	vrijwilligersproject
log	zonder
log	winstoogmerk
log	kleine
log	financiële
log	steun
log	meer
log	activiteiten
log	ontplooien
log	professionaliseren
log	donatie
log	welkom
log	rekeningnummer
log	Stichting
log	giften
log	zijn
log	aftrekbaar
log	belasting
log	Stichting
log	namelijk
log	Belastingdienst
log	erkend
log	ANBI
log	oftewel
log	Algemeen
log	Beogende
log	Instelling
log	Meedoen
log	Iedereen
log	welkom
log	doen
log	fouten
log	discussieer
log	mailinglijst
log	draai
log	dragen
log	stemt
log	ermee
log	bijdrage
log	desbetreffende
log	taalhulpbestand
log	beschikbaar
log	komt
log	onder
log	vrije
log	opensource
log	licenties
log	Indien
log	wenst
log	naam
log	genoemd
log	worden
log	ontvangen
log	schriftelijk
log	verzoek
log	daarvoor
log	graag
log	Rechten
log	derden
log	respecteert
log	rechten
log	derden
log	gegevens
log	vrij
log	beschikbaar
log	houden
log	Voor
log	bijdragen
log	daarom
log	niet
log	zonder
log	toestemming
log	gebruikmaken
log	beschermde
log	naslagwerken
log	zoals
log	woordenboeken
log	toegestaan
log	gebruik
log	maken
log	materialen
log	Nederlandse
log	Taalunie
log	zoals
log	leidraad
log	woordenlijst
log	Indien
log	mening
log	inbreuk
log	maakt
log	rechten
log	verzoeken
log	hierover
log	spoedig
log	mogelijk
log	schriftelijk
log	nemen
log	Stichting
log	Brouwer
log	Nederlandstalige
log	Gebruikersgroep
log	unported
log	RABONL
log	IBAN
log	RABO
log	Stichting
log	algemeen
log	beogende
log	instelling
log	ANBI
error	CSpell: Files checked: 1, Issues found: 189 in 1 files"
`;
